# aca-model

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  debug_cash_on_hand.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md
.github/workflows/: main.yml
scripts/: generate_benchmark_params.py
src/aca_model/: benchmark.py  config.py  consumption_grid.py
src/aca_model/aca/: __init__.py  health_insurance.py  model.py
src/aca_model/aca/regimes/: __init__.py  _overrides.py
src/aca_model/agent/: assets_and_income.py  health.py  labor_market.py  preferences.py  utility.py
src/aca_model/baseline/: __init__.py  health_insurance.py  model.py
src/aca_model/baseline/regimes/: __init__.py  _common.py  _nongroup.py  _retiree.py  _tied.py
src/aca_model/environment/: pensions.py  social_security.py  taxes.py
tests/: test_aca_policies.py  test_baseline_equivalence.py  test_benchmark.py  test_budget_chain_integration.py  test_health_insurance.py  test_initial_conditions_extreme_assets.py  test_model_components.py  test_model_creation.py  test_pension_integration.py  test_pensions.py  test_preferences.py  test_regime_transitions.py  test_social_security.py  test_ss_benefit_integration.py  test_ssi_medicaid_integration.py  test_taxes.py
tests/data/: benchmark_params.pkl
tests/helpers/: social_security.py
